--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "ng2-order-pipe": "^0.1.5",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
