--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-select/ng-select": "^7.2.0",
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
